# software-renderer

./: CMakeLists.txt  SoftwareRenderer.slnx  WindowsProject1.slnx
SoftwareRenderer/: Color.cpp  SoftwareRenderer.aps  SoftwareRenderer.cpp  SoftwareRenderer.rc  SoftwareRenderer.vcxproj  SoftwareRenderer.vcxproj.filters  Vertex.h  resource.h
WindowsProject1/: Color.h  Commons.h  Image.cpp  Texture.cpp  Texture.h  Triangle.h  Vector2.h  Vector3.h  WindowsProject1.aps  WindowsProject1.cpp  WindowsProject1.rc  WindowsProject1.vcxproj  WindowsProject1.vcxproj.filters  resource.h
dependencies/IMGUI/: CMakeLists.txt
dependencies/IMGUI/include/: ImGuizmo.h
dependencies/IMGUI/src/: ImGuiFileDialog.cpp
geApplication/: CMakeLists.txt
geApplication/include/: Commons.h  FColor.h  Image.h  Texture.h  Vertex.h
geApplication/src/: FColor.cpp  Image.cpp  SoftwareRenderer.cpp  Texture.cpp
geCore/: CMakeLists.txt
geCore/include/: geCoreLibraryConfiguration.h  geCorePrerequisites.h  geImage.h  geTexture.h  geTriangle.h  geVertex.h
geCore/include/ge/: geCorePrerequisites.h
geCore/include/ge/assets/: geImage.h
geCore/include/ge/graphics/: geIGraphics.h  geTexture.h  geTriangle.h  geVertex.h
geCore/include/ge/plugins/: geIGraphicsManagerPlugin.h  geIGraphicsPlugin.h  geIPlugin.h  gePluginManager.h  gePluginSlot.h  hcPluginManager.h
geCore/src/: geImage.cpp  geTexture.cpp
geCore/src/graphics/: geIGraphics.cpp
geCore/src/plugins/: geIGraphicsPlugin.cpp  geIPlugin.cpp  gePluginManager.cpp  gePluginSlot.cpp
geDXGraphics/: CMakeLists.txt
geDXGraphics/include/ge/: geDXGraphicsLibraryConfiguration.h  geDXGraphicsPrerequisites.h
geDXGraphics/include/ge/graphics/: geDXGraphics.h
geDXGraphics/include/ge/plugins/: geDXGraphicsPlugin.h
geDXGraphics/src/graphics/: geDXGraphics.cpp
geDXGraphics/src/plugins/: geDXGraphicsPlugin.cpp
hcUtilities/: CMakeLists.txt
hcUtilities/include/hc/utilities/: hcAModule.h  hcAngle.h  hcBitUtilities.h  hcBuffer.h  hcClock.h  hcColor.h  hcColorUInt8.h  hcCommonDefinitions.h  hcDependencyContainer.h  hcExceptionsAliases.h  hcFileUtilities.h  hcIDependencyResolvable.h  hcIJsonProperty.h  hcILogServiceListener.h  hcId.h  hcJson.h  hcJsonArrayBuilder.h  hcJsonFromattedValue.h  hcJsonObjectBuilder.h  hcJsonParsers.h  hcLogService.h  hcMath.h  hcMatrix2.h  hcMatrix3.h  hcMatrix4.h  hcNonCopyable.h  hcNonMovable.h  hcPlatformConfiguration.h  hcRect.h  hcServiceManager.h  hcString.h  hcTime.h  hcTransform.h  hcTypeAliases.h  hcUUID.h  hcUtilities.h  hcUtilitiesLibraryConfiguration.h  hcUtilitiesPrerequisites.h  hcVector2.h  hcVector3.h  (+1 more)
hcUtilities/include/hc/utilities/io/: hcBinaryReader.h  hcBinaryWriter.h  hcISerializable.h
hcUtilities/include/hc/utilities/memory/: hcMemory.h  hcPoolAllocator.h  hcPoolStorage.h  hcStackStorage.h
hcUtilities/src/: hcJsonFormattedValue.cpp
hcUtilities/src/utilities/: hcClock.cpp  hcColorUInt8.cpp  hcFileUtilities.cpp  hcJson.cpp  hcJsonArrayBuilder.cpp  hcJsonObjectBuilder.cpp  hcJsonParsers.cpp  hcLogService.cpp  hcTime.cpp  hcTransform.cpp  hcUUID.cpp
hcUtilities/src/utilities/io/: hcBinaryReader.cpp  hcBinaryWriter.cpp  hcISerializable.cpp
hcUtilities/src/utilities/memory/: hcMemory.cpp  hcPoolStorage.cpp  hcStackStorage.cpp
